--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js", 
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "keywords": [
     "progress",
@@ -24,7 +25,6 @@
   },
   "files": [
     "dist",
-    "types",
     "LICENSE",
     "README"
   ]
