chore: prepare project for publishing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/guuido/trackster.git"
   },
   "keywords": [
     "progress",
