--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trackster",
   "version": "1.0.0",
   "description": "A customizable and lightweight CLI progress bar for Node.js",
-  "main": "dist/index.js", 
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/guuido/trackster.git"
+    "url": "git+https://github.com/guuido/trackster.git"
   },
   "keywords": [
     "progress",
